
v0.18.0
-------

New feature in progress: Document! It mimics the browser somewhat: a document with element, etc... layout, form and area-type inputField will move to this new Document feature (every 'inline' features will be kept separated)


v0.17.0
-------

New: .inputField() now has an 'area' mode (standard mode is now known as 'inline' mode) that use ScreenBuffer and TextBuffer
for its rendering, allowing confined text-area-like inputs. This is still a work in progress and many features of the 'inline' mode
are missing. This will allow creation of terminal forms.


v0.16.14
--------

.createLayout(): it is now possible to pass the x,y coordinate of the top-left corner of the layout


v0.16.13
--------

.createLayout(): now creates accessible and resizable ScreenBuffer surfaces on layout's leaf


v0.16.12
--------

Bugfix .createLayout(): now it creates cross-junction like it should when two tee-junction overlap


v0.16.11
--------

Basic 'responsive' layout drawing is now working.


v0.16.10
--------

Layout: work in progress.


v0.16.9
-------

New feature: .createLayout() -- still in alpha.


v0.16.8
-------

New terminal state: term.state.fullscreen


v0.16.7
-------

Adding new spChars again.


v0.16.6
-------

Adding new spChars.


v0.16.5
-------

New: termkit.spChars now contains some useful utf-8 characters


v0.16.4
-------

Upgrade the string-kit dependency (important bugfix on the style markup feature)


v0.16.3
-------

Documentation on style markup.


v0.16.2
-------

Fixing the new format feature so it works properly.


v0.16.1
-------

Linux gpm patch for node v4.


v0.16.0
-------

Using new string-kit's format feature.


v0.15.12
--------

.yesOrNo(): now it returns a controler featuring the abort() method (see the doc).


v0.15.11
--------

Dependencies: string-kit 0.2.x, async-kit 0.6.x.


v0.15.10
--------

TextBuffer: miscBuffer for application data.


v0.15.9
-------

ScreenBuffer/TextBuffer: Rect constructor improvement.


v0.15.8