@@ -217,8 +217,7 @@ TextBuffer.prototype.setAttrAt = function setAttrAt( attr , x , y )
 	if ( attr && typeof attr === 'object' ) { attr = ScreenBuffer.object2attr( attr ) ; }
 	if ( typeof attr !== 'number' ) { return ; }
 	
-	if ( ! this.attrBuffer[ y ] ) { this.attrBuffer[ y ] = [] ; }
-	this.attrBuffer[ y ][ x ] = attr ;
+	this.setAttrCodeAt( attr , x , y ) ;
 } ;
 
 
@@ -233,6 +232,17 @@ TextBuffer.prototype.setAttrCodeAt = function setAttrCodeAt( attr , x , y )
 
 
 // Set a whole region
+TextBuffer.prototype.setAttrRegion = function setAttrAt( attr , region )
+{
+	if ( attr && typeof attr === 'object' ) { attr = ScreenBuffer.object2attr( attr ) ; }
+	if ( typeof attr !== 'number' ) { return ; }
+	
+	this.setAttrCodeRegion( attr , x , y ) ;
+} ;
+
+
+
+// Faster than setAttrRegion(), do no check attr, assume an attr code (number)
 TextBuffer.prototype.setAttrCodeRegion = function setAttrCodeRegion( attr , region )
 {
 	var x , y , xmin , xmax , ymax ;
