@@ -60,6 +60,7 @@ Element.prototype.create = function createElement( options )
 		parent: { value: options.parent.elementType ? options.parent : null } ,
 		dst: { value: options.dst || options.parent.dst || options.parent } ,
 		id: { value: '' + ( ++ nextId ) , enumerable: true } ,
+		label: { value: options.label || '' , enumerable: true , writable: true } ,
 		content: { value: options.content || '' , enumerable: true , writable: true } ,
 		value: { value: options.value || null , enumerable: true , writable: true } ,
 		x: { value: options.x || 1 , enumerable: true , writable: true } ,
