@@ -76,13 +76,16 @@ TextInput.prototype.create = function createTextInput( options )
 	Element.prototype.create.call( this , options ) ;
 	
 	Object.defineProperties( this , {
-		emptyAttr: { value: options.emptyAttr || { bgColor: 'blue' } , enumerable: true , writable: true } ,
 		textAttr: { value: options.textAttr || { bgColor: 'blue' } , enumerable: true , writable: true } ,
+		emptyAttr: { value: options.emptyAttr || { bgColor: 'blue' } , enumerable: true , writable: true } ,
+		labelFocusAttr: { value: options.labelFocusAttr || { bold: true } , enumerable: true , writable: true } ,
+		labelBlurAttr: { value: options.labelBlurAttr || { dim: true } , enumerable: true , writable: true } ,
 		onKey: { value: this.onKey.bind( this ) , enumerable: true } ,
 		onFocus: { value: this.onFocus.bind( this ) , enumerable: true } ,
 		keyBindings: { value: options.keyBindings || defaultKeyBindings , enumerable: true , writable: true } ,
 		screenBuffer: { value: null , enumerable: true , writable: true } ,
-		textBuffer: { value: null , enumerable: true , writable: true } ,
+		labelTextBuffer: { value: null , enumerable: true , writable: true } ,
+		inputTextBuffer: { value: null , enumerable: true , writable: true } ,
 	} ) ;
 	
 	this.screenBuffer = ScreenBuffer.create( {
@@ -93,13 +96,36 @@ TextInput.prototype.create = function createTextInput( options )
 		height: this.height
 	} ) ;
 	
-	this.textBuffer = TextBuffer.create( {
-		dst: this.screenBuffer ,
-		forceInBound: true
-	} ) ;
+	if ( this.label )
+	{
+		this.labelTextBuffer = TextBuffer.create( {
+			dst: this.screenBuffer ,
+			width: this.label.length ,
+			height: 1
+		} ) ;
+		
+		this.labelTextBuffer.setText( this.label ) ;
+		
+		this.inputTextBuffer = TextBuffer.create( {
+			dst: this.screenBuffer ,
+			x: this.label.length ,
+			forceInBound: true
+		} ) ;
+	}
+	else
+	{
+		this.inputTextBuffer = TextBuffer.create( {
+			dst: this.screenBuffer ,
+			forceInBound: true
+		} ) ;
+	}
 	
-	this.textBuffer.setEmptyCellAttr( this.emptyAttr ) ;
 	this.textAttr = ScreenBuffer.object2attr( this.textAttr ) ;
+	this.emptyAttr = ScreenBuffer.object2attr( this.emptyAttr ) ;
+	this.labelFocusAttr = ScreenBuffer.object2attr( this.labelFocusAttr ) ;
+	this.labelBlurAttr = ScreenBuffer.object2attr( this.labelBlurAttr ) ;
+	
+	this.inputTextBuffer.setEmptyCellAttr( this.emptyAttr ) ;
 	
 	this.on( 'key' , this.onKey ) ;
 	this.on( 'focus' , this.onFocus ) ;
@@ -112,7 +138,7 @@ TextInput.prototype.onKey = function onKey( key , trash , data )
 {
 	if ( data && data.isCharacter )
 	{
-		this.textBuffer.insert( key , this.textAttr ) ;
+		this.inputTextBuffer.insert( key , this.textAttr ) ;
 		this.draw() ;
 	}
 	else
@@ -122,11 +148,11 @@ TextInput.prototype.onKey = function onKey( key , trash , data )
 		switch( this.keyBindings[ key ] )
 		{
 			case 'submit' :
-				this.emit( 'submit' , this.textBuffer.getText() ) ;
+				this.emit( 'submit' , this.inputTextBuffer.getText() ) ;
 				break ;
 			
 			case 'newLine' :
-				this.textBuffer.newLine() ;
+				this.inputTextBuffer.newLine() ;
 				this.draw() ;
 				break ;
 			
@@ -137,42 +163,42 @@ TextInput.prototype.onKey = function onKey( key , trash , data )
 			*/
 			
 			case 'backDelete' :
-				this.textBuffer.backDelete() ;
+				this.inputTextBuffer.backDelete() ;
 				this.draw() ;
 				break ;
 			
 			case 'delete' :
-				this.textBuffer.delete() ;
+				this.inputTextBuffer.delete() ;
 				this.draw() ;
 				break ;
 			
 			case 'backward' :
-				this.textBuffer.moveBackward() ;
+				this.inputTextBuffer.moveBackward() ;
 				this.drawCursor() ;
 				break ;
 			
 			case 'forward' :
-				this.textBuffer.moveForward() ;
+				this.inputTextBuffer.moveForward() ;
 				this.drawCursor() ;
 				break ;
 			
 			case 'startOfLine' :
-				this.textBuffer.moveToColumn( 0 ) ;
+				this.inputTextBuffer.moveToColumn( 0 ) ;
 				this.drawCursor() ;
 				break ;
 			
 			case 'endOfLine' :
-				this.textBuffer.moveToEndOfLine() ;   
+				this.inputTextBuffer.moveToEndOfLine() ;   
 				this.drawCursor() ;
 				break ;
 			
 			case 'down' :
-				this.textBuffer.moveDown() ;
+				this.inputTextBuffer.moveDown() ;
 				this.drawCursor() ;
 				break ;
 			
 			case 'up' :
-				this.textBuffer.moveUp() ;
+				this.inputTextBuffer.moveUp() ;
 				this.drawCursor() ;
 				break ;
 		}
@@ -183,9 +209,21 @@ TextInput.prototype.onKey = function onKey( key , trash , data )
 
 TextInput.prototype.draw = function draw()
 {
-	this.textBuffer.draw() ;
+	if ( this.labelTextBuffer )
+	{
+		this.labelTextBuffer.setEmptyCellAttr( this.hasFocus ? this.labelFocusAttr : this.labelBlurAttr ) ;
+		this.labelTextBuffer.setAttrCodeRegion(
+			this.hasFocus ? this.labelFocusAttr : this.labelBlurAttr ,
+			{ xmin: 0 , xmax: Infinity , ymin: 0 , ymax: Infinity }
+		) ;
+		
+		this.labelTextBuffer.draw() ;
+	}
+	
+	this.inputTextBuffer.draw() ;
 	this.screenBuffer.draw() ;
-	this.textBuffer.drawCursor() ;
+	
+	this.inputTextBuffer.drawCursor() ;
 	this.screenBuffer.drawCursor() ;
 } ;
 
@@ -193,7 +231,7 @@ TextInput.prototype.draw = function draw()
 
 TextInput.prototype.drawCursor = function drawCursor()
 {
-	this.textBuffer.drawCursor() ;
+	this.inputTextBuffer.drawCursor() ;
 	this.screenBuffer.drawCursor() ;
 } ;
 
@@ -202,14 +240,14 @@ TextInput.prototype.drawCursor = function drawCursor()
 TextInput.prototype.onFocus = function onFocus( focus )
 {
 	this.hasFocus = focus ;
-	this.drawCursor() ;
+	this.draw() ;
 } ;
 
 
 
 TextInput.prototype.getValue = function getValue()
 {
-	return this.textBuffer.getText() ;
+	return this.inputTextBuffer.getText() ;
 } ;
         
 
