@@ -69,6 +69,7 @@ termkit.Document = require( './document/Document.js' ) ;
 termkit.Text = require( './document/Text.js' ) ;
 termkit.Button = require( './document/Button.js' ) ;
 termkit.TextInput = require( './document/TextInput.js' ) ;
+termkit.Form = require( './document/Form.js' ) ;
 
 
 
